// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header matches the snapshot 1`] = `
<Router
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "createHref": [Function],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "push": [Function],
      "replace": [Function],
    }
  }
>
  <Header
    theme={
      Object {
        "boxShadow": "0px 5px 40px -5px rgba(0,0,0,0.3)",
        "boxShadowDark": "0px 5px 40px -2px rgba(0,0,0,0.5)",
        "boxShadowLight": "0px 0px 30px -5px rgba(0,0,0,0.15)",
        "color": Object {
          "aqua": "#68F6BA",
          "background": "#fafafa",
          "backgroundDark": "#EAEAEA",
          "backgroundDarkest": "#BCBCBC",
          "blue": "#46C8F5",
          "border": "#d9d9d9",
          "darkBlue": "#2E8AA8",
          "green": "#D8E13F",
          "input": "#F1F3F4",
          "lightBlue": "#97E4FF",
          "lightRed": "#FF8D8D",
          "lightText": "#848484",
          "orange": "#ffbf80",
          "red": "#ED5050",
          "text": "#404040",
          "vividGreen": "#E3FC52",
        },
        "font": Object {
          "header": "'Poiret One', cursive",
          "main": "'Quicksand', sans-serif",
        },
        "gradient": Object {
          "green": "linear-gradient(to bottom, #D8E13F 0%, #BFC644 100%)",
          "greenBlue": " linear-gradient(160deg, #57DACB 0%, #55A2ED 100%)",
          "light": "linear-gradient(to bottom, #ffffff 0%, #f6f6f6 47%, #ededed 100%)",
          "lightRed": "linear-gradient(to bottom, #f39191 0%, #ef6262 100%)",
          "red": "linear-gradient(to bottom, #f07878 0%, #ED5050 100%)",
        },
      }
    }
  />
</Router>
`;

exports[`Nav matches the snapshot 1`] = `
<div
  className="defaultStyle-g21vfe-0 Header__Nav-sc-10rcavb-0 jawuQe"
/>
`;

exports[`StyledNavLink matches the snapshot 1`] = `
<Router
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "createHref": [Function],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "push": [Function],
      "replace": [Function],
    }
  }
>
  <Header__StyledNavLink
    theme={
      Object {
        "boxShadow": "0px 5px 40px -5px rgba(0,0,0,0.3)",
        "boxShadowDark": "0px 5px 40px -2px rgba(0,0,0,0.5)",
        "boxShadowLight": "0px 0px 30px -5px rgba(0,0,0,0.15)",
        "color": Object {
          "aqua": "#68F6BA",
          "background": "#fafafa",
          "backgroundDark": "#EAEAEA",
          "backgroundDarkest": "#BCBCBC",
          "blue": "#46C8F5",
          "border": "#d9d9d9",
          "darkBlue": "#2E8AA8",
          "green": "#D8E13F",
          "input": "#F1F3F4",
          "lightBlue": "#97E4FF",
          "lightRed": "#FF8D8D",
          "lightText": "#848484",
          "orange": "#ffbf80",
          "red": "#ED5050",
          "text": "#404040",
          "vividGreen": "#E3FC52",
        },
        "font": Object {
          "header": "'Poiret One', cursive",
          "main": "'Quicksand', sans-serif",
        },
        "gradient": Object {
          "green": "linear-gradient(to bottom, #D8E13F 0%, #BFC644 100%)",
          "greenBlue": " linear-gradient(160deg, #57DACB 0%, #55A2ED 100%)",
          "light": "linear-gradient(to bottom, #ffffff 0%, #f6f6f6 47%, #ededed 100%)",
          "lightRed": "linear-gradient(to bottom, #f39191 0%, #ef6262 100%)",
          "red": "linear-gradient(to bottom, #f07878 0%, #ED5050 100%)",
        },
      }
    }
  />
</Router>
`;

exports[`Tagline matches the snapshot 1`] = `
<div
  className="Header__Tagline-sc-10rcavb-3 gCLrZy"
/>
`;
